--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build:dev": "webpack --mode development",
-    "build:prod": "webpack --mode production"
+    "build:prod": "webpack --mode production",
+    "build:multi": "webpack --config ./MultiEntryPoint/webpack.config.js --mode development"
   },
   "keywords": [
     "Platzi",
