--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --mode production",
-    "build:multi": "webpack --config ./MultiEntryPoint/webpack.config.js --mode development"
+    "build:multi": "webpack --config ./MultiEntryPoint/webpack.config.js --mode development",
+    "build:css": "webpack --config ./cssStyleLoader/webpack.config.js --mode development"
   },
   "keywords": [
     "Platzi",
@@ -15,6 +16,8 @@
   "author": "@Gollum23",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "3.2.0",
+    "style-loader": "1.0.0",
     "webpack": "4.41.0",
     "webpack-cli": "3.3.9"
   }
