--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --mode production",
     "build:multi": "webpack --config ./MultiEntryPoint/webpack.config.js --mode development",
-    "build:css": "webpack --config ./cssStyleLoader/webpack.config.js --mode development"
+    "build:css": "webpack --config ./cssStyleLoader/webpack.config.js --mode development",
+    "build:plugins": "webpack --config ./plugins/webpack.config.js --mode development"
   },
   "keywords": [
     "Platzi",
@@ -17,6 +18,8 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "3.2.0",
+    "html-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "0.8.0",
     "style-loader": "1.0.0",
     "webpack": "4.41.0",
     "webpack-cli": "3.3.9"
