--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Curso de Webpack 2019",
   "main": "index.js",
   "scripts": {
-    "build:dev": "webpack --mode development",
+    "build": "webpack --mode development",
     "build:prod": "webpack --mode production",
     "build:multi": "webpack --config ./MultiEntryPoint/webpack.config.js --mode development",
     "build:css": "webpack --config ./cssStyleLoader/webpack.config.js --mode development",
-    "build:plugins": "webpack --config ./plugins/webpack.config.js --mode development"
+    "build:plugins": "webpack --config ./plugins/webpack.config.js --mode development",
+    "build:dev": "webpack-dev-server --config ./WebpackDevServer/webpack.config.js --mode development"
   },
   "keywords": [
     "Platzi",
@@ -22,6 +23,7 @@
     "mini-css-extract-plugin": "0.8.0",
     "style-loader": "1.0.0",
     "webpack": "4.41.0",
-    "webpack-cli": "3.3.9"
+    "webpack-cli": "3.3.9",
+    "webpack-dev-server": "3.8.1"
   }
 }
