--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:multi": "webpack --config ./MultiEntryPoint/webpack.config.js --mode development",
     "build:css": "webpack --config ./cssStyleLoader/webpack.config.js --mode development",
     "build:plugins": "webpack --config ./plugins/webpack.config.js --mode development",
-    "build:dev": "webpack-dev-server --config ./WebpackDevServer/webpack.config.js --mode development"
+    "build:dev": "webpack-dev-server --config ./WebpackDevServer/webpack.config.js --mode development",
+    "build:babel": "webpack-dev-server --config ./babel/webpack.config.js --mode development"
   },
   "keywords": [
     "Platzi",
@@ -18,6 +19,10 @@
   "author": "@Gollum23",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "7.6.2",
+    "@babel/plugin-transform-runtime": "7.6.2",
+    "@babel/preset-env": "7.6.2",
+    "babel-loader": "8.0.6",
     "css-loader": "3.2.0",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.8.0",
@@ -25,5 +30,8 @@
     "webpack": "4.41.0",
     "webpack-cli": "3.3.9",
     "webpack-dev-server": "3.8.1"
+  },
+  "dependencies": {
+    "@babel/runtime": "7.6.2"
   }
 }
