--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:css": "webpack --config ./cssStyleLoader/webpack.config.js --mode development",
     "build:plugins": "webpack --config ./plugins/webpack.config.js --mode development",
     "build:dev": "webpack-dev-server --config ./WebpackDevServer/webpack.config.js --mode development",
-    "build:babel": "webpack-dev-server --config ./babel/webpack.config.js --mode development"
+    "build:babel": "webpack-dev-server --config ./babel/webpack.config.js --mode development",
+    "build:react": "webpack-dev-server --config ./react/webpack.config.js --mode development"
   },
   "keywords": [
     "Platzi",
@@ -22,6 +23,7 @@
     "@babel/core": "7.6.2",
     "@babel/plugin-transform-runtime": "7.6.2",
     "@babel/preset-env": "7.6.2",
+    "@babel/preset-react": "7.0.0",
     "babel-loader": "8.0.6",
     "css-loader": "3.2.0",
     "html-webpack-plugin": "3.2.0",
@@ -32,6 +34,8 @@
     "webpack-dev-server": "3.8.1"
   },
   "dependencies": {
-    "@babel/runtime": "7.6.2"
+    "@babel/runtime": "7.6.2",
+    "react": "16.9.0",
+    "react-dom": "16.9.0"
   }
 }
