--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:plugins": "webpack --config ./plugins/webpack.config.js --mode development",
     "build:dev": "webpack-dev-server --config ./WebpackDevServer/webpack.config.js --mode development",
     "build:babel": "webpack-dev-server --config ./babel/webpack.config.js --mode development",
-    "build:react": "webpack-dev-server --config ./react/webpack.config.js --mode development"
+    "build:react": "webpack-dev-server --config ./react/webpack.config.js --mode development",
+    "build:url": "webpack-dev-server --config ./urlLoader/webpack.config.js --mode development"
   },
   "keywords": [
     "Platzi",
@@ -26,9 +27,11 @@
     "@babel/preset-react": "7.0.0",
     "babel-loader": "8.0.6",
     "css-loader": "3.2.0",
+    "file-loader": "4.2.0",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.8.0",
     "style-loader": "1.0.0",
+    "url-loader": "2.1.0",
     "webpack": "4.41.0",
     "webpack-cli": "3.3.9",
     "webpack-dev-server": "3.8.1"
