--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:dev": "webpack-dev-server --config ./WebpackDevServer/webpack.config.js --mode development",
     "build:babel": "webpack-dev-server --config ./babel/webpack.config.js --mode development",
     "build:react": "webpack-dev-server --config ./react/webpack.config.js --mode development",
-    "build:url": "webpack-dev-server --config ./urlLoader/webpack.config.js --mode development"
+    "build:url": "webpack-dev-server --config ./urlLoader/webpack.config.js --mode development",
+    "build:prepro": "webpack-dev-server --config ./prepro/webpack.config.js --mode development"
   },
   "keywords": [
     "Platzi",
@@ -29,8 +30,16 @@
     "css-loader": "3.2.0",
     "file-loader": "4.2.0",
     "html-webpack-plugin": "3.2.0",
+    "less": "3.10.3",
+    "less-loader": "5.0.0",
     "mini-css-extract-plugin": "0.8.0",
+    "node-sass": "4.12.0",
+    "postcss-loader": "3.0.0",
+    "postcss-nested": "4.1.2",
+    "sass-loader": "8.0.0",
     "style-loader": "1.0.0",
+    "stylus": "0.54.7",
+    "stylus-loader": "3.0.2",
     "url-loader": "2.1.0",
     "webpack": "4.41.0",
     "webpack-cli": "3.3.9",
