--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:babel": "webpack-dev-server --config ./babel/webpack.config.js --mode development",
     "build:react": "webpack-dev-server --config ./react/webpack.config.js --mode development",
     "build:url": "webpack-dev-server --config ./urlLoader/webpack.config.js --mode development",
-    "build:prepro": "webpack-dev-server --config ./prepro/webpack.config.js --mode development"
+    "build:prepro": "webpack-dev-server --config ./prepro/webpack.config.js --mode development",
+    "build:duplicated": "webpack --config ./preventDuplication/webpack.config.js --mode development"
   },
   "keywords": [
     "Platzi",
